# DESERT_Underwater

./: .clang-format  .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Doxyfile  LICENSE  LICENSE.md  README.md  coding_rules.md  commit_rules.md  desert.gitignore
DESERT_Addons/Example_of_folder_organization_for_ADDONS/: Makefile.am  configure.ac
DESERT_Addons/Example_of_folder_organization_for_ADDONS/m4/: desert.m4
DESERT_Addons/packer_uwufetch/: Makefile.am  configure.ac  initlib.cc  packer-uwUFetch-init.tcl  packer_uwUFetch.cc  packer_uwUFetch.h
DESERT_Addons/packer_uwufetch/m4/: desert.m4  desertAddon.m4
DESERT_Addons/uwmulti_traffic_control/: Makefile.am  configure.ac  initlib.cc  uwmulti-cmn-hdr.h  uwmulti-multiphy-controller.cpp  uwmulti-multiphy-controller.h  uwmulti-traffic-control-default.tcl  uwmulti-traffic-control.cc  uwmulti-traffic-control.h  uwmulti-traffic-range-crt.cc  uwmulti-traffic-range-crt.h
DESERT_Addons/uwmulti_traffic_control/m4/: desert.m4
DESERT_Framework/DESERT/: ACKNOWLEDGEMENTS  COPYRIGHT  Makefile.am  configure.ac
DESERT_Framework/DESERT/application/uwApplication/: Makefile.am  initlib.cc  initlib.cpp  uwApplication-defaults.tcl  uwApplication_TCP_socket.cc  uwApplication_TCP_socket.cpp  uwApplication_UDP_socket.cc  uwApplication_UDP_socket.cpp  uwApplication_cmn_header.h  uwApplication_module.cc  uwApplication_module.cpp  uwApplication_module.h
DESERT_Framework/DESERT/application/uwcbr/: Makefile.am  initlib.cc  initlib.cpp  uwcbr-defaults.tcl  uwcbr-module.cc  uwcbr-module.cpp  uwcbr-module.h  uwcbr-tracer.cc  uwcbr-tracer.cpp
DESERT_Framework/DESERT/application/uwvbr/: Makefile.am  initlib.cc  initlib.cpp  uwvbr-defaults.tcl  uwvbr-module.cc  uwvbr-module.cpp  uwvbr-module.h
DESERT_Framework/DESERT/channel/uwem_channel/: Makefile.am  initlib.cpp  uwem-channel-default.tcl  uwem-channel.cpp  uwem-channel.h
DESERT_Framework/DESERT/channel/uwoptical_channel/: Makefile.am  initlib.cc  initlib.cpp  uwoptical-channel-default.tcl  uwoptical-channel.cc  uwoptical-channel.cpp  uwoptical-channel.h
DESERT_Framework/DESERT/data_link/py-mac/: Makefile.am  initlib.cpp  mac_logic.py  pymac-init.tcl  pymac.cpp  pymac.h
DESERT_Framework/DESERT/data_link/uw-aloha-q/: Makefile.am  initlib.cpp  uw-aloha-q-init.tcl  uw-aloha-q-node.cpp  uw-aloha-q-node.h  uw-aloha-q-sink.cpp  uw-aloha-q-sink.h
DESERT_Framework/DESERT/data_link/uw-aloha-q-sync/: Makefile.am  initlib.cpp  uw-aloha-q-hdrs.h.gch  uw-aloha-q-sync-hdrs.h  uw-aloha-q-sync-init.tcl  uw-aloha-q-sync-node.cpp  uw-aloha-q-sync-node.h  uw-aloha-q-sync-sink.cpp  uw-aloha-q-sync-sink.h
DESERT_Framework/DESERT/data_link/uw-cs-burst/: Makefile.am  initlib.cpp  uw-cs-burst-init.tcl  uw-cs-burst.cpp  uw-cs-burst.h
DESERT_Framework/DESERT/data_link/uw-cs-sea-trial/: Makefile.am  initlib.cpp  uw-cs-sea-trial-init.tcl  uw-cs-sea-trial.cpp  uw-cs-sea-trial.h
DESERT_Framework/DESERT/data_link/uw-csma-aloha/: Makefile.am  initlib.cc  initlib.cpp  uw-csma-aloha-init.tcl  uw-csma-aloha.cpp  uw-csma-aloha.h
DESERT_Framework/DESERT/data_link/uw-csma-aloha-trigger/: Makefile.am  initlib.cc  initlib.cpp  uw-csma-aloha-trigger-node.cc  uw-csma-aloha-trigger-node.cpp  uw-csma-aloha-trigger-node.h  uw-csma-aloha-trigger-sink.cc  uw-csma-aloha-trigger-sink.cpp  uw-csma-aloha-trigger-sink.h  uw-csma-aloha-triggered-init.tcl
DESERT_Framework/DESERT/data_link/uw-csma-aloha-triggered/: Makefile.am  initlib.cc  uw-csma-aloha-triggered-auv.cc  uw-csma-aloha-triggered-auv.h  uw-csma-aloha-triggered-init.tcl  uw-csma-aloha-triggered-node.cc  uw-csma-aloha-triggered-node.h
DESERT_Framework/DESERT/data_link/uw-csma-ca/: Makefile.am  initlib.cpp  uw-csma-ca-hdrs.h  uw-csma-ca-init.tcl  uw-csma-ca.cpp  uw-csma-ca.h
DESERT_Framework/DESERT/data_link/uw-ofdm-aloha/: Makefile.am  initlib.cpp  uw-ofdm-aloha-init.tcl  uw-ofdm-aloha.cpp  uw-ofdm-aloha.h
DESERT_Framework/DESERT/data_link/uw-smart-ofdm/: Makefile.am  initlib.cpp  uw-smart-ofdm-init.tcl  uw-smart-ofdm.cpp  uw-smart-ofdm.h  uwofdmmac_hdr.h
DESERT_Framework/DESERT/data_link/uw-t-lohi/: Makefile.am  clmsg-wakeUp-tone.cc  clmsg-wakeUp-tone.cpp  clmsg-wakeUp-tone.h  initlib.cc  initlib.cpp  interference-uw-WakeUp.cc  interference-uw-WakeUp.cpp  interference-uw-WakeUp.h  uw-mac-TLohi-defaults.tcl  uw-mac-TLohi-tracer.cc  uw-mac-TLohi-tracer.cpp  uw-mac-TLohi.cc  uw-mac-TLohi.cpp  uw-mac-TLohi.h  uw-phy-WakeUp.cc  uw-phy-WakeUp.cpp  uw-phy-WakeUp.h  wake-up-pkt-hdr.h
DESERT_Framework/DESERT/data_link/uwUFetch/: Makefile.am  initlib.cc  initlib.cpp  uwUFetch_AUV.cc  uwUFetch_AUV.cpp  uwUFetch_AUV.h  uwUFetch_AUV_mod_1.cc  uwUFetch_AUV_mod_1.cpp  uwUFetch_AUV_mod_2.cc  uwUFetch_AUV_mod_2.cpp  uwUFetch_NODE.h  uwUFetch_NODE_HEADNODE.cc  uwUFetch_NODE_HEADNODE.cpp  uwUFetch_NODE_HEADNODE_mod_1.cc  uwUFetch_NODE_HEADNODE_mod_1.cpp  uwUFetch_NODE_HEADNODE_mod_2.cc  uwUFetch_NODE_HEADNODE_mod_2.cpp  uwUFetch_NODE_SENSOR.cc  uwUFetch_NODE_SENSOR.cpp  uwUFetch_cmn_hdr.h  uwUFetch_default.tcl
DESERT_Framework/DESERT/data_link/uwaloha/: Makefile.am  initlib.cc  initlib.cpp  uwaloha-init.tcl  uwaloha.cpp  uwaloha.h
DESERT_Framework/DESERT/data_link/uwdacap/: Makefile.am  initlib.cc  initlib.cpp  uw-mac-DACAP-alter.cpp  uw-mac-DACAP-alter.h  uw-mac-DACAP-defaults.tcl  uw-mac-DACAP-tracer.cc  uw-mac-DACAP-tracer.cpp
DESERT_Framework/DESERT/data_link/uwjammer/: Makefile.am  initlib.cpp  uwjammer.cpp  uwjammer.h  uwjammer_cmn_hdr.h  uwjammer_default.tcl
DESERT_Framework/DESERT/data_link/uwmll/: Makefile.am  initlib.cc  initlib.cpp  marptable.cc  marptable.cpp  marptable.h  uwmll-default.tcl  uwmll-module.cc  uwmll-module.cpp  uwmll-module.h
DESERT_Framework/DESERT/data_link/uwmmac_clmsgs/: Makefile.am  initlib.cpp  uwmmac-clmsg-default.tcl  uwmmac-clmsg.cpp  uwmmac-clmsg.h
DESERT_Framework/DESERT/data_link/uwpolling/: Makefile.am  initlib.cc  initlib.cpp  uwpolling_AUV.cc  uwpolling_AUV.cpp  uwpolling_AUV.h  (+7 more)
DESERT_Framework/DESERT/m4/: Makefile.am  nsmiracle.m4
DESERT_Framework/DESERT/samples/: README
(+1088 files in other folders)
